--- a/TodoApi/appsettings.json
+++ b/TodoApi/appsettings.json
@@ -8,7 +8,7 @@
   
   "AllowedHosts": "*",
   "ConnectionString":{
-    "ToDoDB": "server=localhost;user=yehudit;password=y0533145943;database=praktykod2" 
+    "ToDoDB": "server=bky8sxn0fpocen5rglpt-mysql.services.clever-cloud.com;user=uenp6nzraibq1f8i;password=q2whDyk5RZpuqiVo93kJ;database=bky8sxn0fpocen5rglpt" 
   }
   
 }
